--- a/Desktop/FormDepotAdminPanelBDD/test-output/index.html
+++ b/Desktop/FormDepotAdminPanelBDD/test-output/index.html
@@ -60,7 +60,7 @@
                 </li>
                 <li>
                   <a href="#" panel-name="group-Default_suite" class="navigator-link ">
-                    <span>0 groups</span>
+                    <span>1 group</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,46 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">0 methods,   </span>
+                    <span class="method-stats">6 methods,   6 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
+                    </span>
+                    <div class="method-list-content passed suite-Default_suite">
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="StepDef.TestNGCucumberRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Test search functionality with firstname.&quot;, &quot;Test Advisor management flow.&quot;)">runScenario("Test search functionality with firstname.", "Test Advisor management flow.")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="StepDef.TestNGCucumberRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Test search functionality with firstname.&quot;, &quot;Test Advisor management flow.&quot;)">runScenario("Test search functionality with firstname.", "Test Advisor management flow.")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="StepDef.TestNGCucumberRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Test login with valid credentials&quot;, &quot;Test login functionality&quot;)">runScenario("Test login with valid credentials", "Test login functionality")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="StepDef.TestNGCucumberRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Test search functionality with firstname.&quot;, &quot;Test Advisor management flow.&quot;)">runScenario("Test search functionality with firstname.", "Test Advisor management flow.")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="StepDef.TestNGCucumberRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Test search functionality with firstname.&quot;, &quot;Test Advisor management flow.&quot;)">runScenario("Test search functionality with firstname.", "Test Advisor management flow.")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="StepDef.TestNGCucumberRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Test Filter functionality.&quot;, &quot;Test Advisor management flow.&quot;)">runScenario("Test Filter functionality.", "Test Advisor management flow.")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content passed suite-Default_suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -104,10 +143,78 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
+          <div class="suite-Default_suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">StepDef.TestNGCucumberRunner</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Test search functionality with firstname.&quot;, &quot;Test Advisor management flow.&quot;)">
+                  </a> <!-- runScenario("Test search functionality with firstname.", "Test Advisor management flow.") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Test search functionality with firstname.","Test Advisor management flow.")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Test search functionality with firstname.&quot;, &quot;Test Advisor management flow.&quot;)">
+                  </a> <!-- runScenario("Test search functionality with firstname.", "Test Advisor management flow.") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Test search functionality with firstname.","Test Advisor management flow.")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Test login with valid credentials&quot;, &quot;Test login functionality&quot;)">
+                  </a> <!-- runScenario("Test login with valid credentials", "Test login functionality") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Test login with valid credentials","Test login functionality")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Test search functionality with firstname.&quot;, &quot;Test Advisor management flow.&quot;)">
+                  </a> <!-- runScenario("Test search functionality with firstname.", "Test Advisor management flow.") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Test search functionality with firstname.","Test Advisor management flow.")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Test search functionality with firstname.&quot;, &quot;Test Advisor management flow.&quot;)">
+                  </a> <!-- runScenario("Test search functionality with firstname.", "Test Advisor management flow.") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Test search functionality with firstname.","Test Advisor management flow.")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Test Filter functionality.&quot;, &quot;Test Advisor management flow.&quot;)">
+                  </a> <!-- runScenario("Test Filter functionality.", "Test Advisor management flow.") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Test Filter functionality.","Test Advisor management flow.")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/fv/tx2ql07n7pz30v3s2gzlnhrnvgbm_y/T/testng-eclipse-610829445/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/fv/tx2ql07n7pz30v3s2gzlnhrnvgbm_y/T/testng-eclipse--1772633192/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -140,6 +247,14 @@
             <span class="header-content">Groups for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="test-group">
+              <span class="test-group-name">cucumber</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">runScenario</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="times-Default_suite" class="panel">
@@ -156,12 +271,36 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(0);
+data.addRows(6);
+data.setCell(0, 0, 0)
+data.setCell(0, 1, 'runScenario')
+data.setCell(0, 2, 'StepDef.TestNGCucumberRunner')
+data.setCell(0, 3, 8427);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'runScenario')
+data.setCell(1, 2, 'StepDef.TestNGCucumberRunner')
+data.setCell(1, 3, 7349);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'runScenario')
+data.setCell(2, 2, 'StepDef.TestNGCucumberRunner')
+data.setCell(2, 3, 4933);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'runScenario')
+data.setCell(3, 2, 'StepDef.TestNGCucumberRunner')
+data.setCell(3, 3, 4690);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'runScenario')
+data.setCell(4, 2, 'StepDef.TestNGCucumberRunner')
+data.setCell(4, 3, 4683);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'runScenario')
+data.setCell(5, 2, 'StepDef.TestNGCucumberRunner')
+data.setCell(5, 3, 3367);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 0 ms</span>
+              <span class="suite-total-time">Total running time: 33 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -189,14 +328,36 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">StepDef.TestNGCucumberRunner</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">setUpClass(org.testng.TestRunner@3fa2213)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@23f3dbf0)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">runScenario("Test login with valid credentials", "Test login functionality")</span>
+                <span class="method-start">393 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("Test search functionality with firstname.", "Test Advisor management flow.")</span>
+                <span class="method-start">7748 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("Test search functionality with firstname.", "Test Advisor management flow.")</span>
+                <span class="method-start">12684 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("Test search functionality with firstname.", "Test Advisor management flow.")</span>
+                <span class="method-start">17372 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("Test search functionality with firstname.", "Test Advisor management flow.")</span>
+                <span class="method-start">25803 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("Test Filter functionality.", "Test Advisor management flow.")</span>
+                <span class="method-start">30499 ms</span>
+              </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">572 ms</span>
+                <span class="method-start">33869 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
