--- a/Desktop/FormDepotAdminPanelBDD/test-output/index.html
+++ b/Desktop/FormDepotAdminPanelBDD/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 5 failed tests</span>
+      <span class="top-banner-font-1">1 suite, 6 failed tests</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods, 5 failed,   1 passed</span>
+                    <span class="method-stats">6 methods, 6 failed,   </span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -101,6 +101,16 @@
                       <a href="#" panel-name="suite-Cucumber_Test_Suite" class="show-methods failed suite-Cucumber_Test_Suite"> (show)</a> <!-- show-methods failed suite-Cucumber_Test_Suite -->
                     </span>
                     <div class="method-list-content failed suite-Cucumber_Test_Suite">
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Cucumber_Test_Suite" title="StepDef.TestNGCucumberRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Test search functionality with firstname.&quot;, &quot;Test Advisor management flow.&quot;)">runScenario("Test search functionality with firstname.", "Test Advisor management flow.")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Cucumber_Test_Suite" title="StepDef.TestNGCucumberRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Test login with valid credentials&quot;, &quot;Test login functionality&quot;)">runScenario("Test login with valid credentials", "Test login functionality")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img src="failed.png" width="3%"/>
                         <a href="#" panel-name="suite-Cucumber_Test_Suite" title="StepDef.TestNGCucumberRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Test Filter functionality.&quot;, &quot;Test Advisor management flow.&quot;)">runScenario("Test Filter functionality.", "Test Advisor management flow.")</a> <!-- method navigator-link -->
@@ -121,26 +131,7 @@
                         <a href="#" panel-name="suite-Cucumber_Test_Suite" title="StepDef.TestNGCucumberRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Test search functionality with firstname.&quot;, &quot;Test Advisor management flow.&quot;)">runScenario("Test search functionality with firstname.", "Test Advisor management flow.")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                      <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Cucumber_Test_Suite" title="StepDef.TestNGCucumberRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Test search functionality with firstname.&quot;, &quot;Test Advisor management flow.&quot;)">runScenario("Test search functionality with firstname.", "Test Advisor management flow.")</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
                     </div> <!-- method-list-content failed suite-Cucumber_Test_Suite -->
-                  </li>
-                  <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Cucumber_Test_Suite" class="hide-methods passed suite-Cucumber_Test_Suite"> (hide)</a> <!-- hide-methods passed suite-Cucumber_Test_Suite -->
-                      <a href="#" panel-name="suite-Cucumber_Test_Suite" class="show-methods passed suite-Cucumber_Test_Suite"> (show)</a> <!-- show-methods passed suite-Cucumber_Test_Suite -->
-                    </span>
-                    <div class="method-list-content passed suite-Cucumber_Test_Suite">
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Cucumber_Test_Suite" title="StepDef.TestNGCucumberRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Test login with valid credentials&quot;, &quot;Test login functionality&quot;)">runScenario("Test login with valid credentials", "Test login functionality")</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content passed suite-Cucumber_Test_Suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -158,6 +149,58 @@
               <span class="class-name">StepDef.TestNGCucumberRunner</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Test search functionality with firstname.&quot;, &quot;Test Advisor management flow.&quot;)">
+                  </a> <!-- runScenario("Test search functionality with firstname.", "Test Advisor management flow.") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Test search functionality with firstname.","Test Advisor management flow.")</span>
+                  <div class="stack-trace">java.lang.NullPointerException: Cannot invoke &quot;org.openqa.selenium.WebDriver.getCurrentUrl()&quot; because &quot;BaseClass.BaseMethods.driver&quot; is null
+	at BaseClass.BaseMethods.verifyPageUrl(BaseMethods.java:128)
+	at StepDef.advisorMangement.user_is_on_advisor_management_screen(advisorMangement.java:18)
+	at ✽.User is on Advisor Management screen.(file:///Users/mohammadakram.saiyed/git/Formdepotjava/Desktop/FormDepotAdminPanelBDD/src/test/resources/Features/2_AdvisorManagement.feature:5)
+
+</div> <!-- stack-trace -->
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Test login with valid credentials&quot;, &quot;Test login functionality&quot;)">
+                  </a> <!-- runScenario("Test login with valid credentials", "Test login functionality") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Test login with valid credentials","Test login functionality")</span>
+                  <div class="stack-trace">org.openqa.selenium.NoSuchWindowException: no such window: target window already closed
+from unknown error: web view not found
+  (Session info: chrome=126.0.6478.126)
+Build info: version: &apos;4.21.0&apos;, revision: &apos;79ed462ef4&apos;
+System info: os.name: &apos;Mac OS X&apos;, os.arch: &apos;x86_64&apos;, os.version: &apos;13.3.1&apos;, java.version: &apos;17.0.11&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Command: [02e2f293085576b644115fbc315f00af, findElement {value=//*[@name=&apos;username&apos;], using=xpath}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 126.0.6478.126, chrome: {chromedriverVersion: 125.0.6422.141 (4b1e8393712..., userDataDir: /var/folders/fv/tx2ql07n7pz...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:58399}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: mac, proxy: Proxy(), se:cdp: ws://localhost:58399/devtoo..., se:cdpVersion: 126.0.6478.126, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: 02e2f293085576b644115fbc315f00af
+	at org.openqa.selenium.remote.ErrorCodec.decode(ErrorCodec.java:167)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:138)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:50)
+	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:190)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:216)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:174)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:518)
+	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:165)
+	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:59)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:355)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:349)
+	at BaseClass.BaseMethods.find(BaseMethods.java:92)
+	at BaseClass.BaseMethods.type(BaseMethods.java:102)
+	at StepDef.Login.user_enters_username_and_password(Login.java:34)
+	at ✽.User enters radixdt and Radixweb@8(file:///Users/mohammadakram.saiyed/git/Formdepotjava/Desktop/FormDepotAdminPanelBDD/src/test/resources/Features/1_Login.feature:38)
+... Removed 5 stack frames
+</div> <!-- stack-trace -->
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="runScenario(&quot;Test Filter functionality.&quot;, &quot;Test Advisor management flow.&quot;)">
@@ -222,42 +265,8 @@
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="runScenario(&quot;Test search functionality with firstname.&quot;, &quot;Test Advisor management flow.&quot;)">
-                  </a> <!-- runScenario("Test search functionality with firstname.", "Test Advisor management flow.") -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("Test search functionality with firstname.","Test Advisor management flow.")</span>
-                  <div class="stack-trace">java.lang.NullPointerException: Cannot invoke &quot;org.openqa.selenium.WebDriver.getCurrentUrl()&quot; because &quot;BaseClass.BaseMethods.driver&quot; is null
-	at BaseClass.BaseMethods.verifyPageUrl(BaseMethods.java:128)
-	at StepDef.advisorMangement.user_is_on_advisor_management_screen(advisorMangement.java:18)
-	at ✽.User is on Advisor Management screen.(file:///Users/mohammadakram.saiyed/git/Formdepotjava/Desktop/FormDepotAdminPanelBDD/src/test/resources/Features/2_AdvisorManagement.feature:5)
-
-</div> <!-- stack-trace -->
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Cucumber_Test_Suite-class-failed -->
-          <div class="suite-Cucumber_Test_Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">StepDef.TestNGCucumberRunner</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="runScenario(&quot;Test login with valid credentials&quot;, &quot;Test login functionality&quot;)">
-                  </a> <!-- runScenario("Test login with valid credentials", "Test login functionality") -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("Test login with valid credentials","Test login functionality")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Cucumber_Test_Suite-class-passed -->
         </div> <!-- panel Cucumber_Test_Suite -->
         <div panel-name="test-xml-Cucumber_Test_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -267,8 +276,8 @@
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite thread-count=&quot;2&quot; parallel=&quot;methods&quot; name=&quot;Cucumber Test Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
-  &lt;test thread-count=&quot;2&quot; parallel=&quot;methods&quot; name=&quot;Cucumber Tests&quot;&gt;
+&lt;suite thread-count=&quot;1&quot; parallel=&quot;methods&quot; name=&quot;Cucumber Test Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+  &lt;test thread-count=&quot;1&quot; parallel=&quot;methods&quot; name=&quot;Cucumber Tests&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;StepDef.TestNGCucumberRunner&quot;/&gt;
     &lt;/classes&gt;
@@ -322,32 +331,32 @@ data.addRows(6);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'StepDef.TestNGCucumberRunner')
-data.setCell(0, 3, 5759);
+data.setCell(0, 3, 3310);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'runScenario')
 data.setCell(1, 2, 'StepDef.TestNGCucumberRunner')
-data.setCell(1, 3, 100);
+data.setCell(1, 3, 103);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'runScenario')
 data.setCell(2, 2, 'StepDef.TestNGCucumberRunner')
-data.setCell(2, 3, 100);
+data.setCell(2, 3, 103);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'runScenario')
 data.setCell(3, 2, 'StepDef.TestNGCucumberRunner')
-data.setCell(3, 3, 100);
+data.setCell(3, 3, 98);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'runScenario')
 data.setCell(4, 2, 'StepDef.TestNGCucumberRunner')
-data.setCell(4, 3, 100);
+data.setCell(4, 3, 98);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'runScenario')
 data.setCell(5, 2, 'StepDef.TestNGCucumberRunner')
-data.setCell(5, 3, 99);
+data.setCell(5, 3, 98);
 window.suiteTableData['Cucumber_Test_Suite']= { tableData: data, tableDiv: 'times-div-Cucumber_Test_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Cucumber_Test_Suite">
               </div> <!-- times-div-Cucumber_Test_Suite -->
             </div> <!-- times-div -->
@@ -379,42 +388,44 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">runScenario("Test search functionality with firstname.", "Test Advisor management flow.")</span>
+                <span class="method-start">513 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">runScenario("Test login with valid credentials", "Test login functionality")</span>
-                <span class="method-start">503 ms</span>
+                <span class="method-start">513 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">runScenario("Test search functionality with firstname.", "Test Advisor management flow.")</span>
-                <span class="method-start">503 ms</span>
+                <span class="method-start">513 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">runScenario("Test search functionality with firstname.", "Test Advisor management flow.")</span>
-                <span class="method-start">503 ms</span>
+                <span class="method-start">513 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">runScenario("Test search functionality with firstname.", "Test Advisor management flow.")</span>
-                <span class="method-start">503 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">runScenario("Test search functionality with firstname.", "Test Advisor management flow.")</span>
-                <span class="method-start">503 ms</span>
+                <span class="method-start">513 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">runScenario("Test Filter functionality.", "Test Advisor management flow.")</span>
-                <span class="method-start">504 ms</span>
+                <span class="method-start">514 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">6265 ms</span>
+                <span class="method-start">3827 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
